# Rust-Start

Html-css/: Day3.css  Day3.html  Style.css  day2.html  first.html  second.html
Html-css/Day4/: Index.html  style.css
Javascript-new/: index.html
Rust-Start/Rust_Ownership/src/: main.rs  reference.rs
Rust-Start/StructsInRust/: Cargo.toml
Rust-Start/StructsInRust/src/: debug.rs  returnsStruct.rs  structs.rs
Rust-Start/data_set/src/: another.rs  christmas.rs  fibonacci.py  main.rs
Rust-Start/guessing_game/python/: compare.py
Rust-Start/guessing_game/src/: main.rs
Rust-Start/hello/: hello_world.rs
Rust-Start/hello_world/: hello.rs  loop.rs
Rust-Start/method_syntax/: Cargo.toml
Rust-Start/method_syntax/src/: associated.rs  enums.rs  fit.rs
Rust-Start/person/src/: main.rs
